objects/fferpcore__ProcessRun__c.object
<CustomObject>
    <fields>
        <fullName>fferpcore__AsyncApexJobId__c</fullName>
        <description>ID of the asynchronous job controlling this process run.</description>
        <label>Async Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <description>Process Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__FinishTime__c</fullName>
        <label>Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Process Run is a parent and has child processes.</description>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ParentProcessRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In the case of grouped process chaining, this displays the parent of all the process runs.</description>
        <label>Parent Process Run</label>
        <referenceTo>fferpcore__ProcessRun__c</referenceTo>
        <relationshipLabel>Child Process Runs</relationshipLabel>
        <relationshipName>Process_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fferpcore__StartedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that started the process.</description>
        <label>Started By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfErrors__c</fullName>
        <description>Total Number of Logs which are in Error status.</description>
        <label>Total Number of Errors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfPending__c</fullName>
        <description>Total Number of Logs which are in Pending status.</description>
        <label>Total Number of Pending</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfSuccesses__c</fullName>
        <description>Total Number of Logs which are in Ok status.</description>
        <label>Total Number of Successes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__UsingDetailedMonitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Detailed Monitoring has been selected for the Process Run.</description>
        <label>Using Detailed Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <label>Process Run</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__ParentProcessRun__c</columns>
        <columns>fferpcore__Description__c</columns>
        <columns>fferpcore__StartTime__c</columns>
        <columns>fferpcore__FinishTime__c</columns>
        <columns>fferpcore__StartedBy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>fferpcore__ParentProcessRuns</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__ParentProcessRun__c</columns>
        <columns>fferpcore__Description__c</columns>
        <columns>fferpcore__StartTime__c</columns>
        <columns>fferpcore__FinishTime__c</columns>
        <columns>fferpcore__StartedBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fferpcore__IsParent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Parent Process Runs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Process Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>